--- a/bower.json
+++ b/bower.json
@@ -9,5 +9,8 @@
   "dependencies": {
     "angular": "~1.2.16",
     "angular-ui-router": "~0.2.10"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1.2.16"
   }
 }
