--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "gulp": "^3.6.1",
     "karma": "^0.12.9",
     "karma-phantomjs-launcher": "^0.1.4",
-    "karma-jasmine": "^0.1.5"
+    "karma-jasmine": "^0.1.5",
+    "gulp-jshint": "^1.5.3",
+    "gulp-concat": "^2.2.0",
+    "gulp-livereload": "^1.3.1",
+    "node-static": "^0.7.3"
   }
 }
