--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
   "private": true,
   "dependencies": {
     "angular": "~1.2.16",
-    "angular-ui-router": "~0.2.10"
+    "angular-ui-router": "~0.2.10",
+    "bootstrap": "~3.1.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.16"
