--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-jshint": "^1.5.3",
     "gulp-concat": "^2.2.0",
     "gulp-livereload": "^1.3.1",
-    "node-static": "^0.7.3"
+    "node-static": "^0.7.3",
+    "chromedriver": "^2.9.1-0"
   }
 }
