--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "gulp-concat": "^2.2.0",
     "gulp-livereload": "^1.3.1",
     "node-static": "^0.7.3",
-    "chromedriver": "^2.9.1-0"
+    "chromedriver": "^2.9.1-0",
+    "connect": "^2.14.5",
+    "serve-static": "^1.1.0",
+    "proxy-middleware": "^0.5.0",
+    "url": "^0.10.1"
   }
 }
