--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "angular": "~1.2.16",
     "angular-ui-router": "~0.2.10",
-    "bootstrap": "~3.1.1"
+    "bootstrap": "~3.1.1",
+    "angular-flash": "~0.1.13"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.16"
