--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular": "~1.2.16",
     "angular-ui-router": "~0.2.10",
     "bootstrap": "~3.1.1",
-    "angular-flash": "~0.1.13"
+    "angular-flash": "~0.1.13",
+    "d3": "~3.4.6"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.16"
