--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-ui-router": "~0.2.10",
     "bootstrap": "~3.1.1",
     "angular-flash": "~0.1.13",
-    "d3": "~3.4.6"
+    "d3": "~3.4.6",
+    "codemirror": "~4.1.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.16"
