--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "bootstrap": "~3.1.1",
     "angular-flash": "~0.1.13",
     "d3": "~3.4.6",
-    "codemirror": "~4.1.0"
+    "codemirror": "~4.1.0",
+    "angular-ui-bootstrap": "~0.11.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.16"
