--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
   "author": "Eric Lech",
   "license": "ISC",
   "devDependencies": {
-    "gulp": "^3.6.1",
-    "karma": "^0.12.9",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "karma-jasmine": "^0.1.5",
-    "gulp-jshint": "^1.5.3",
-    "gulp-concat": "^2.2.0",
-    "gulp-livereload": "^1.3.1",
-    "node-static": "^0.7.3",
     "chromedriver": "^2.9.1-0",
     "connect": "^2.14.5",
-    "serve-static": "^1.1.0",
+    "gulp": "^3.6.1",
+    "gulp-concat": "^2.2.0",
+    "gulp-jshint": "^1.5.3",
+    "gulp-livereload": "^1.3.1",
+    "gulp-replace": "^0.3.0",
+    "karma": "^0.12.9",
+    "karma-jasmine": "^0.1.5",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "node-static": "^0.7.3",
     "proxy-middleware": "^0.5.0",
+    "serve-static": "^1.1.0",
     "url": "^0.10.1"
   },
   "dependencies": {}
