--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-jshint": "^1.5.3",
     "gulp-livereload": "^1.3.1",
     "gulp-replace": "^0.3.0",
+    "gulp-uglify": "^0.3.0",
     "karma": "^0.12.9",
     "karma-jasmine": "^0.1.5",
     "karma-phantomjs-launcher": "^0.1.4",
